# Infection

./: Cargo.toml  gdb.exe.stackdump
benches/: community.rs  interact.rs
interaction/: Cargo.toml
src/: lib.rs
src/game/: board.rs  graph.rs  mod.rs  population.rs  time.rs
src/game/pathogen/: infection.rs  mod.rs  symptoms.rs  types.rs
src/game/population/: mod.rs
src/game/population/person_behavior/: interaction.rs  mod.rs
structure/: Cargo.toml
structure/src/: graph.rs  lib.rs  time.rs
tests/: community_transfer.rs  single_infection.rs
