[package]
name = "infection"
version = "0.1.0"
authors = ["Joshua Radin <jradin16@gmail.com>"]
edition = "2018"
description = "A thing that represents a spread of an infection"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand = "0.7.3"
chrono = "0.4.11"
num-traits = "0.2.11"
regex = "1.3.6"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "interact"
harness = false