[package]
name = "infection"
version = "0.1.0"
authors = ["Joshua Radin <jradin16@gmail.com>"]
edition = "2018"
description = "A thing that represents a spread of an infection"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "structure",
    "interaction"
]

[dependencies]
rand = "0.7.3"
chrono = "0.4.11"
regex = "1.3.6"
structure = { path = "structure" , version = "0.1.0"}
rayon = "1.3.0"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "interact"
harness = false

[[bench]]
name = "community"
harness = false